hphp/hack/test/typecheck/fc_enum_12.php.exp
File "fc_enum_12.php", line 4, characters 14-27:
HH\BuiltinEnum is an implementation internal class that cannot be used directly (Naming[2053])
